[package]
name = "grex_packet_capture"
version = "0.1.0"
edition = "2021"

[dependencies]
thingbuf = { version = "0.1.3", features = ["static"] }
anyhow = "1.0.68"
console-subscriber = "0.1.8"
core_affinity = "0.8.0"
socket2 = "0.4.7"
thiserror = "1.0.38"
tokio = { version = "1", features = ["net", "rt-multi-thread", "macros"] }

[profile.release]
debug = true
